fix spacing in header

--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,17 +1,18 @@
 .header {
     width: 100%;
-    height: fit-content;
+    height: 100%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 5px 24px;
+    padding: 0 24px;
     border-bottom: solid #E4EBFA 2px;
     background: #FFFFFF;
 }
 
 .header-content {
     width: 100%;
+    height: 100%;
     display: flex;
     justify-content: space-between;
     align-items: center;
